--- a/public/screen.css
+++ b/public/screen.css
@@ -9,4 +9,19 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  margin-left: 45%;
+  margin-right: 45%;
+  background-image: url('/images/weather.jpeg');
+}
+
+input {
+  margin-bottom: 30px;
+}
+
+button {
+  margin-bottom: 70px;
+}
+
+span {
+  padding: 10px;
 }
