--- a/public/screen.css
+++ b/public/screen.css
@@ -9,19 +9,62 @@ html {
 body {
   margin: 0;
   min-height: 100%;
-  margin-left: 45%;
-  margin-right: 45%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 10%;
   background-image: url('/images/weather.jpeg');
 }
 
-input {
-  margin-bottom: 30px;
+.input {
+  margin-left: 40%;
+  margin-right: 40%;
+  /* margin-bottom: 30px; */
 }
 
 button {
   margin-bottom: 70px;
 }
 
-span {
-  padding: 10px;
+.content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-bottom: 50px;
+}
+
+.description {
+  /* width: 10px; */
+  margin-left: 20px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-items: left;
+}
+
+@media (min-width: 300px) and (max-width: 600px) {
+  .content {
+    display: flex;
+    flex-direction: column;
+    width: 50px;
+  }
+
+  .symbol {
+    margin-bottom: 10px;
+    /* margin-left: 20px; */
+    /* width: 10px; */
+  }
+
+  body {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+}
+
+.data {
+  /* margin-left: 10px; */
+}
+
+.symbol {
+  margin-right: 130px;
 }
