--- a/public/screen.css
+++ b/public/screen.css
@@ -12,14 +12,15 @@ body {
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 10%;
-  background-image: url('/images/weather.jpeg');
+  background-image: url('/images/w.jpg');
+  background-repeat: round;
 }
 
-.input {
+/* .input {
   margin-left: 40%;
   margin-right: 40%;
   /* margin-bottom: 30px; */
-}
+} */
 
 button {
   margin-bottom: 70px;
@@ -27,10 +28,10 @@ button {
 
 .content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin-bottom: 50px;
+  margin-top: 50px;
 }
 
 .description {
@@ -40,6 +41,11 @@ button {
   display: flex;
   flex-direction: column;
   justify-items: left;
+}
+
+.row {
+  color: black;
+  width: 1000px;
 }
 
 @media (min-width: 300px) and (max-width: 600px) {
