--- a/public/screen.css
+++ b/public/screen.css
@@ -11,19 +11,25 @@ body {
   min-height: 100%;
   margin-left: 10%;
   margin-right: 10%;
-  margin-top: 10%;
   background-image: url('/images/w.jpg');
   background-repeat: round;
+  background-position: center center;
+  background-repeat:  no-repeat;
+  background-attachment: fixed;
+  background-size:  cover;
 }
 
-/* .input {
-  margin-left: 40%;
-  margin-right: 40%;
-  /* margin-bottom: 30px; */
-} */
+#input {
+  width: 100%;
+  padding: 10px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
 
 button {
-  margin-bottom: 70px;
+  padding: 20px;
+  width: 100%;
+  background-color: rgb(0, 132, 255);
 }
 
 .content {
@@ -31,7 +37,7 @@ button {
   flex-direction: column;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin-top: 50px;
+  /* margin-top: 50px; */
 }
 
 .description {
@@ -39,8 +45,8 @@ button {
   margin-left: 20px;
   margin-bottom: 15px;
   display: flex;
-  flex-direction: column;
-  justify-items: left;
+  /* flex-direction: column;
+  justify-items: left; */
 }
 
 .row {
@@ -54,23 +60,8 @@ button {
     flex-direction: column;
     width: 50px;
   }
-
-  .symbol {
-    margin-bottom: 10px;
-    /* margin-left: 20px; */
-    /* width: 10px; */
-  }
-
-  body {
-    margin-left: 50px;
-    margin-right: 50px;
-  }
 }
 
 .data {
-  /* margin-left: 10px; */
-}
-
-.symbol {
-  margin-right: 130px;
+  margin-left: 10px;
 }
